syntax = "proto3";

package batch;

import "broker.proto";
import "common.proto";


service BatchService {
    rpc StreamBatchRequest (stream BatchRequest) returns (stream BatchResponse) {
    }
}

message BatchRequest {
    repeated uint64 requestIDs = 1;
    repeated Request requests = 2;

    message Request {
        common.RequestType requestTyp = 1;
        oneof request {
            broker.WritePointsRequest writePoints = 2;
        }
    }
}

message BatchResponse {
    repeated uint64 requestIDs = 1;
    repeated Response responses = 2;

    message Response {
        common.RequestType requestType = 1;
        oneof response {
            broker.WritePointsResponse writePoints = 2;
        }
    }
}
